--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
@@ -30,9 +30,9 @@
                         个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="logout"><span
@@ -54,9 +54,10 @@
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 文章管理</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
+                            <dd><a href="/article/art_cate.html" target="fm"><i class="layui-icon layui-icon-app"></i>
+                                    文章类别</a></dd>
+                            <dd><a href="/article/art_list.html" target="fm"><i class="layui-icon layui-icon-app"></i> 文章列表</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i> 发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
@@ -64,8 +65,10 @@
                         <dl class="layui-nav-child">
                             <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>
                                     基本资料</a></dd>
-                            <dd><a href="/user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i> 更换头像</a></dd>
-                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i> 重置密码</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i>
+                                    更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>
+                                    重置密码</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -74,7 +77,7 @@
 
         <div class="layui-body">
             <!-- 内容主体区域 -->
-            <iframe src="/user/user_avatar.html" frameborder="0" name="fm"></iframe>
+            <iframe src="/article/art_list.html" frameborder="0" name="fm"></iframe>
         </div>
 
         <div class="layui-footer">
