--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -40,7 +40,7 @@
   <div class="row2">
       <input type="file"  id="btnChooseImage" style="display: none;" accept="image/jpeg,image/png">
     <button type="button" class="layui-btn" id="btnUp">上传</button>
-    <button type="button" class="layui-btn layui-btn-danger">确定</button>
+    <button type="button" class="layui-btn layui-btn-danger" id="btnUpload">确定</button>
   </div>
         </div>
       </div>
