--- a/article/art_list.html
+++ b/article/art_list.html
@@ -16,6 +16,30 @@
         <div class="layui-card-body">
 
             <!-- 筛选区域 -->
+            <form class="layui-form layui-form-pane" action="" id="form_cate">
+                <div class="layui-form-item layui-inline">
+                    <label class="layui-form-label ">分类</label>
+                    <div class="layui-input-block">
+                        <select name="cate_id">
+                            <option value="">请选择分类</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-form-item layui-inline">
+                    <label class="layui-form-label">输入框</label>
+                    <div class="layui-input-block">
+                        <select name="state">
+                            <option value="">请选择状态</option>
+                            <option value="已发布">已发布</option>
+                            <option value="草稿">草稿</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="layui-form-item layui-inline">
+                    <button class="layui-btn" lay-submit lay-filter="formDemo">筛选</button>
+                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                </div>
+            </form>
             <!-- 列表区域 -->
             <table class="layui-table">
                 <colgroup>
@@ -38,6 +62,7 @@
                 <tbody></tbody>
             </table>
             <!-- 分页区域 -->
+            <div id="pagebox"></div>
         </div>
     </div>
 
@@ -46,18 +71,27 @@
     <script src="/assets/js/baseAPI.js"></script>
     <script src="/assets/js/article/art_list.js"></script>
     <script src="/assets/lib/template-web.js"></script>
+    <!-- 文章列表区域模版结构 -->
     <script type="text/html" id="tpl-table">
         {{each data}}
         <tr>
             <td>{{$value.title}}</td>
             <td>{{$value.cate_name}}</td>
-            <td>{{$value.pub_date}}</td>
+            <td>{{$value.pub_date|dataFormat}}</td>
             <td>{{$value.state}}</td>
             <td>
                 <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-del" data-id="{{$value.Id}}">删除</button>
             </td>
         </tr>
+        {{/each}}
+    </script>
+    <!-- 筛选区域的分类模版结构 -->
+    <script type="text/html" id="tpl_cate">
+        <option value="">请选择分类</option>
+        {{each data}}
+        <option value="{{$value.Id}}">{{$value.name}}</option>
+
         {{/each}}
     </script>
 </body>
