更改默认主页，去掉文章列表页面编辑按钮

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="layui-body">
             <!-- 内容主体区域 -->
-            <iframe src="/article/art_list.html" frameborder="0" name="fm"></iframe>
+            <iframe src="/home/dashboard.html" frameborder="0" name="fm"></iframe>
         </div>
 
         <div class="layui-footer">
